Twitch Twitter same thing

--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
           rel="stylesheet">
-    <title>Twitter Stream Search</title>
+    <title>Twitch Stream Search</title>
   </head>
   <body>
     <div id="root"></div>
